# ManiDreams

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  cage_constraints.html  changelog.html  custom_tasks.html  documentation.html  dris.html  faq.html  genindex.html  index.html  installation.html  maniskill_defaults.html  objects.inv  pyproject.toml  quickstart.html  real2sim_demo.html  runnable_examples.html  search.html  searchindex.js  solvers.html  supported_tasks.html  tsip.html  why_manidreams.html  zeroshot_real2sim.html
.doctrees/: cage_constraints.doctree  changelog.doctree  custom_tasks.doctree  documentation.doctree  dris.doctree  environment.pickle  faq.doctree  installation.doctree  maniskill_defaults.doctree  quickstart.doctree  real2sim_demo.doctree  runnable_examples.doctree  solvers.doctree  supported_tasks.doctree  tsip.doctree  why_manidreams.doctree  zeroshot_real2sim.doctree
.doctrees/api/: cages.doctree  core.doctree  env.doctree  index.doctree  physics.doctree  samplers.doctree  solvers.doctree
.github/workflows/: docs.yml
_sources/: documentation.md  real2sim_demo.md  runnable_examples.md  solvers.md  supported_tasks.md  tsip.md
_sources/api/: physics.rst
_static/: custom.css
api/: cages.html  core.html  env.html  index.html  physics.html  samplers.html  solvers.html
assets/: __init__.py
assets/robots/: __init__.py
assets/robots/floating_panda_gripper/: __init__.py  floating_panda_gripper_fin.py  panda_fin_gripper.urdf
assets/robots/panda_catcher/: panda_catcher.urdf
docs/: cage_constraints.html  cage_constraints.md  changelog.md  conf.py  documentation.md  dris.html  dris.md  faq.html  faq.md  genindex.html  index.html  installation.html  maniskill_defaults.md  objects.inv  quickstart.md  real2sim_demo.md  search.html  searchindex.js  supported_tasks.html  supported_tasks.md  tsip.html  why_manidreams.html  why_manidreams.md  zeroshot_real2sim.md
docs/_sources/: documentation.md
docs/_sources/api/: env.rst  solvers.rst
docs/_templates/: landing.html
docs/api/: cages.rst  core.html  core.rst  env.html  index.html  index.md  physics.html  samplers.rst
docs_src/: conf.py  custom_tasks.md  installation.md  quickstart.md
docs_src/_templates/: landing.html
examples/executors/: __init__.py  catching_task_executor.py  d415_ffs_executor.py  franka_executor.py  maniskill_executor_base.py  picking_task_executor.py  pushing_task_executor.py
examples/physics/: __init__.py  catch_backend.py  maniskill_base.py  newton_backend.py  pick_backend.py  push_backend_sim.py
examples/physics/maniskill_default_tasks/: __init__.py  dris_backend.py  dris_env_factory.py  dris_utils.py  task_config.py
examples/physics/push_backend_learned/: __init__.py  backend.py  visualizer.py
examples/samplers/catching/: __init__.py  encoders.py  geometry.py  mappers.py  models.py
examples/samplers/maniskill_defaults/: __init__.py  agent.py  task_presets.py
examples/tasks/maniskill_defaults/: __init__.py  main.py
examples/tasks/object_catching/: __init__.py  main.py
examples/tasks/object_picking/: main.py
examples/tasks/object_pushing/: main.py  main_pixel.py  main_pixel_feedback.py
examples/tasks/zeroshot_real2sim_demo/: main.py
src/manidreams/: __init__.py  env.py
src/manidreams/base/: __init__.py  cage.py  dris.py  executor.py  (+2 more)
(+51 files in other folders)
